// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity screen component renders correctly with an entity as param 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <CommentList
    entity={
      ActivityModel {
        "attachment_guid": false,
        "blurb": false,
        "container_guid": "activityguid0",
        "custom_data": false,
        "custom_type": false,
        "description": "Congratulations! ",
        "edited": "",
        "getThumbSource": [Function],
        "guid": "activityguid0",
        "is_visible": false,
        "mature": false,
        "mature_visibility": false,
        "message": "Message",
        "ownerObj": UserModel {
          "getAvatarSource": [Function],
          "guid": "824853017709780997",
          "subtype": false,
          "time_created": "1522036284",
          "type": "user",
        },
        "owner_guid": "824853017709780997",
        "parent_guid": "838106762591510528",
        "paywall": undefined,
        "perma_url": false,
        "rowKey": "something0",
        "thumbnail_src": false,
        "thumbs:down:count": undefined,
        "thumbs:down:user_guids": undefined,
        "thumbs:up:count": undefined,
        "thumbs:up:user_guids": undefined,
        "title": "TITLE",
        "type": "activity",
        "wire_totals": Object {
          "tokens": 1000000000000000000,
        },
        Symbol(mobx did run lazy initializers): true,
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": 2,
            "name": "ActivityModel@7.keys",
            "observers": Set {},
          },
          "name": "ActivityModel@7",
          "target": [Circular],
          "values": Map {
            "votedUp" => false,
            "votedDown" => false,
            "mature_visibility" => false,
            "is_visible" => false,
            "thumbs:down:count" => undefined,
            "thumbs:up:count" => undefined,
            "paywall" => undefined,
            "mature" => false,
            "edited" => "",
            "thumbs:down:user_guids" => undefined,
            "thumbs:up:user_guids" => undefined,
          },
        },
      }
    }
    header={
      <Activity
        autoHeight={true}
        entity={
          ActivityModel {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "activityguid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "getThumbSource": [Function],
            "guid": "activityguid0",
            "is_visible": false,
            "mature": false,
            "mature_visibility": false,
            "message": "Message",
            "ownerObj": UserModel {
              "getAvatarSource": [Function],
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "paywall": undefined,
            "perma_url": false,
            "rowKey": "something0",
            "thumbnail_src": false,
            "thumbs:down:count": undefined,
            "thumbs:down:user_guids": undefined,
            "thumbs:up:count": undefined,
            "thumbs:up:user_guids": undefined,
            "title": "TITLE",
            "type": "activity",
            "wire_totals": Object {
              "tokens": 1000000000000000000,
            },
            Symbol(mobx did run lazy initializers): true,
            Symbol(mobx administration): ObservableObjectAdministration$$1 {
              "defaultEnhancer": [Function],
              "keysAtom": Atom$$1 {
                "diffValue": 0,
                "isBeingObserved": false,
                "isPendingUnobservation": false,
                "lastAccessedBy": 0,
                "lowestObserverState": 2,
                "name": "ActivityModel@7.keys",
                "observers": Set {},
              },
              "name": "ActivityModel@7",
              "target": [Circular],
              "values": Map {
                "votedUp" => false,
                "votedDown" => false,
                "mature_visibility" => false,
                "is_visible" => false,
                "thumbs:down:count" => undefined,
                "thumbs:up:count" => undefined,
                "paywall" => undefined,
                "mature" => false,
                "edited" => "",
                "thumbs:down:user_guids" => undefined,
                "thumbs:up:user_guids" => undefined,
              },
            },
          }
        }
        navigation={
          Object {
            "push": [MockFunction],
            "state": Object {
              "params": Object {
                "entity": Object {
                  "attachment_guid": false,
                  "blurb": false,
                  "container_guid": "activityguid0",
                  "custom_data": false,
                  "custom_type": false,
                  "description": "Congratulations! ",
                  "edited": "",
                  "getThumbSource": [Function],
                  "guid": "activityguid0",
                  "mature": false,
                  "message": "Message",
                  "ownerObj": Object {
                    "getAvatarSource": [Function],
                    "guid": "824853017709780997",
                    "subtype": false,
                    "time_created": "1522036284",
                    "type": "user",
                  },
                  "owner_guid": "824853017709780997",
                  "parent_guid": "838106762591510528",
                  "perma_url": false,
                  "rowKey": "something0",
                  "thumbnail_src": false,
                  "title": "TITLE",
                  "type": "activity",
                  "wire_totals": Object {
                    "tokens": 1000000000000000000,
                  },
                },
              },
              "routeName": "some",
            },
          }
        }
        newsfeed={
          NewsfeedStore {
            "boosts": Array [],
            "filter": "subscribed",
            "loadingBoost": true,
            "service": NewsfeedService {
              "_getFeed": [MockFunction],
              "getBoosts": [MockFunction],
              "getFeed": [MockFunction],
              "getFeedChannel": [MockFunction],
              "getFeedSuggested": [MockFunction],
            },
            "stores": Object {
              "boostfeed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@6.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@6",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [],
                    },
                  },
                },
                "loading": false,
              },
              "subscribed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [
                    ActivityModel {
                      "attachment_guid": false,
                      "blurb": false,
                      "container_guid": "activityguid0",
                      "custom_data": false,
                      "custom_type": false,
                      "description": "Congratulations! ",
                      "edited": "",
                      "getThumbSource": [Function],
                      "guid": "activityguid0",
                      "is_visible": false,
                      "mature": false,
                      "mature_visibility": false,
                      "message": "Message",
                      "ownerObj": UserModel {
                        "getAvatarSource": [Function],
                        "guid": "824853017709780997",
                        "subtype": false,
                        "time_created": "1522036284",
                        "type": "user",
                      },
                      "owner_guid": "824853017709780997",
                      "parent_guid": "838106762591510528",
                      "paywall": undefined,
                      "perma_url": false,
                      "rowKey": "something0",
                      "thumbnail_src": false,
                      "thumbs:down:count": undefined,
                      "thumbs:down:user_guids": undefined,
                      "thumbs:up:count": undefined,
                      "thumbs:up:user_guids": undefined,
                      "title": "TITLE",
                      "type": "activity",
                      "wire_totals": Object {
                        "tokens": 1000000000000000000,
                      },
                      Symbol(mobx did run lazy initializers): true,
                      Symbol(mobx administration): ObservableObjectAdministration$$1 {
                        "defaultEnhancer": [Function],
                        "keysAtom": Atom$$1 {
                          "diffValue": 0,
                          "isBeingObserved": false,
                          "isPendingUnobservation": false,
                          "lastAccessedBy": 0,
                          "lowestObserverState": 2,
                          "name": "ActivityModel@7.keys",
                          "observers": Set {},
                        },
                        "name": "ActivityModel@7",
                        "target": [Circular],
                        "values": Map {
                          "votedUp" => false,
                          "votedDown" => false,
                          "mature_visibility" => false,
                          "is_visible" => false,
                          "thumbs:down:count" => undefined,
                          "thumbs:up:count" => undefined,
                          "paywall" => undefined,
                          "mature" => false,
                          "edited" => "",
                          "thumbs:down:user_guids" => undefined,
                          "thumbs:up:user_guids" => undefined,
                        },
                      },
                    },
                  ],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@4.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@4",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [
                        ActivityModel {
                          "attachment_guid": false,
                          "blurb": false,
                          "container_guid": "activityguid0",
                          "custom_data": false,
                          "custom_type": false,
                          "description": "Congratulations! ",
                          "edited": "",
                          "getThumbSource": [Function],
                          "guid": "activityguid0",
                          "is_visible": false,
                          "mature": false,
                          "mature_visibility": false,
                          "message": "Message",
                          "ownerObj": UserModel {
                            "getAvatarSource": [Function],
                            "guid": "824853017709780997",
                            "subtype": false,
                            "time_created": "1522036284",
                            "type": "user",
                          },
                          "owner_guid": "824853017709780997",
                          "parent_guid": "838106762591510528",
                          "paywall": undefined,
                          "perma_url": false,
                          "rowKey": "something0",
                          "thumbnail_src": false,
                          "thumbs:down:count": undefined,
                          "thumbs:down:user_guids": undefined,
                          "thumbs:up:count": undefined,
                          "thumbs:up:user_guids": undefined,
                          "title": "TITLE",
                          "type": "activity",
                          "wire_totals": Object {
                            "tokens": 1000000000000000000,
                          },
                          Symbol(mobx did run lazy initializers): true,
                          Symbol(mobx administration): ObservableObjectAdministration$$1 {
                            "defaultEnhancer": [Function],
                            "keysAtom": Atom$$1 {
                              "diffValue": 0,
                              "isBeingObserved": false,
                              "isPendingUnobservation": false,
                              "lastAccessedBy": 0,
                              "lowestObserverState": 2,
                              "name": "ActivityModel@7.keys",
                              "observers": Set {},
                            },
                            "name": "ActivityModel@7",
                            "target": [Circular],
                            "values": Map {
                              "votedUp" => false,
                              "votedDown" => false,
                              "mature_visibility" => false,
                              "is_visible" => false,
                              "thumbs:down:count" => undefined,
                              "thumbs:up:count" => undefined,
                              "paywall" => undefined,
                              "mature" => false,
                              "edited" => "",
                              "thumbs:down:user_guids" => undefined,
                              "thumbs:up:user_guids" => undefined,
                            },
                          },
                        },
                      ],
                    },
                  },
                },
                "loading": false,
              },
              "suggested": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@5.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@5",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [],
                    },
                  },
                },
                "loading": false,
              },
            },
            "viewed": Array [],
            Symbol(mobx did run lazy initializers): true,
            Symbol(mobx administration): ObservableObjectAdministration$$1 {
              "defaultEnhancer": [Function],
              "keysAtom": Atom$$1 {
                "diffValue": 0,
                "isBeingObserved": false,
                "isPendingUnobservation": false,
                "lastAccessedBy": 0,
                "lowestObserverState": 2,
                "name": "NewsfeedStore@11.keys",
                "observers": Set {},
              },
              "name": "NewsfeedStore@11",
              "target": [Circular],
              "values": Map {
                "filter" => "subscribed",
                "boosts" => Array [],
              },
            },
          }
        }
      />
    }
    navigation={
      Object {
        "push": [MockFunction],
        "state": Object {
          "params": Object {
            "entity": Object {
              "attachment_guid": false,
              "blurb": false,
              "container_guid": "activityguid0",
              "custom_data": false,
              "custom_type": false,
              "description": "Congratulations! ",
              "edited": "",
              "getThumbSource": [Function],
              "guid": "activityguid0",
              "mature": false,
              "message": "Message",
              "ownerObj": Object {
                "getAvatarSource": [Function],
                "guid": "824853017709780997",
                "subtype": false,
                "time_created": "1522036284",
                "type": "user",
              },
              "owner_guid": "824853017709780997",
              "parent_guid": "838106762591510528",
              "perma_url": false,
              "rowKey": "something0",
              "thumbnail_src": false,
              "title": "TITLE",
              "type": "activity",
              "wire_totals": Object {
                "tokens": 1000000000000000000,
              },
            },
          },
          "routeName": "some",
        },
      }
    }
    onInputFocus={[Function]}
    store={
      Object {
        "attachment": Object {},
        "comments": Array [
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid0",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid1",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid1",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid2",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid2",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid3",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid3",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid4",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid4",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
        ],
        "embed": RichEmbedStore {
          "_richEmbedFetchTimer": null,
          "clearRichEmbedAction": [Function],
          "richEmbedUrl": "",
          "setRichEmbedPromise": null,
        },
        "loadComments": [Function],
        "loadNext": "aaaaaa",
        "loadPrevious": "aaaaaa",
        "post": [Function],
        "setText": [Function],
      }
    }
  />
</ForwardRef(View)>
`;

exports[`Activity screen component should show loader until it loads the activity 1`] = `<CenteredLoading />`;

exports[`Activity screen component should show loader until it loads the activity 2`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <CommentList
    entity={
      ActivityModel {
        "edited": undefined,
        "is_visible": false,
        "mature": undefined,
        "mature_visibility": false,
        "paywall": undefined,
        "thumbs:down:count": undefined,
        "thumbs:down:user_guids": undefined,
        "thumbs:up:count": undefined,
        "thumbs:up:user_guids": undefined,
        Symbol(mobx did run lazy initializers): true,
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": 2,
            "name": "ActivityModel@18.keys",
            "observers": Set {},
          },
          "name": "ActivityModel@18",
          "target": [Circular],
          "values": Map {
            "votedUp" => false,
            "votedDown" => false,
            "mature_visibility" => false,
            "is_visible" => false,
            "thumbs:down:count" => undefined,
            "thumbs:up:count" => undefined,
            "paywall" => undefined,
            "mature" => undefined,
            "edited" => undefined,
            "thumbs:down:user_guids" => undefined,
            "thumbs:up:user_guids" => undefined,
          },
        },
      }
    }
    header={
      <Activity
        autoHeight={true}
        entity={
          ActivityModel {
            "edited": undefined,
            "is_visible": false,
            "mature": undefined,
            "mature_visibility": false,
            "paywall": undefined,
            "thumbs:down:count": undefined,
            "thumbs:down:user_guids": undefined,
            "thumbs:up:count": undefined,
            "thumbs:up:user_guids": undefined,
            Symbol(mobx did run lazy initializers): true,
            Symbol(mobx administration): ObservableObjectAdministration$$1 {
              "defaultEnhancer": [Function],
              "keysAtom": Atom$$1 {
                "diffValue": 0,
                "isBeingObserved": false,
                "isPendingUnobservation": false,
                "lastAccessedBy": 0,
                "lowestObserverState": 2,
                "name": "ActivityModel@18.keys",
                "observers": Set {},
              },
              "name": "ActivityModel@18",
              "target": [Circular],
              "values": Map {
                "votedUp" => false,
                "votedDown" => false,
                "mature_visibility" => false,
                "is_visible" => false,
                "thumbs:down:count" => undefined,
                "thumbs:up:count" => undefined,
                "paywall" => undefined,
                "mature" => undefined,
                "edited" => undefined,
                "thumbs:down:user_guids" => undefined,
                "thumbs:up:user_guids" => undefined,
              },
            },
          }
        }
        navigation={
          Object {
            "push": [MockFunction],
            "state": Object {
              "params": Object {
                "guid": "1",
              },
              "routeName": "some",
            },
          }
        }
        newsfeed={
          NewsfeedStore {
            "loadingBoost": true,
            "service": NewsfeedService {
              "_getFeed": [MockFunction],
              "getBoosts": [MockFunction],
              "getFeed": [MockFunction],
              "getFeedChannel": [MockFunction],
              "getFeedSuggested": [MockFunction],
            },
            "stores": Object {
              "boostfeed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@15.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@15",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [],
                    },
                  },
                },
                "loading": false,
              },
              "subscribed": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@13.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@13",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [],
                    },
                  },
                },
                "loading": false,
              },
              "suggested": Object {
                "list": OffsetFeedListStore {
                  "entities": Array [],
                  Symbol(mobx administration): ObservableObjectAdministration$$1 {
                    "defaultEnhancer": [Function],
                    "keysAtom": Atom$$1 {
                      "diffValue": 0,
                      "isBeingObserved": false,
                      "isPendingUnobservation": false,
                      "lastAccessedBy": 0,
                      "lowestObserverState": 2,
                      "name": "OffsetFeedListStore@14.keys",
                      "observers": Set {},
                    },
                    "name": "OffsetFeedListStore@14",
                    "target": [Circular],
                    "values": Map {
                      "entities" => Array [],
                    },
                  },
                },
                "loading": false,
              },
            },
            "viewed": Array [],
          }
        }
      />
    }
    navigation={
      Object {
        "push": [MockFunction],
        "state": Object {
          "params": Object {
            "guid": "1",
          },
          "routeName": "some",
        },
      }
    }
    onInputFocus={[Function]}
    store={
      Object {
        "attachment": Object {},
        "comments": Array [
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid0",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid0",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid1",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid1",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid2",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid2",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid3",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid3",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
          Object {
            "attachment_guid": false,
            "blurb": false,
            "container_guid": "guid4",
            "custom_data": false,
            "custom_type": false,
            "description": "Congratulations! ",
            "edited": "",
            "guid": "guid4",
            "mature": false,
            "ownerObj": Object {
              "guid": "824853017709780997",
              "subtype": false,
              "time_created": "1522036284",
              "type": "user",
            },
            "owner_guid": "824853017709780997",
            "parent_guid": "838106762591510528",
            "perma_url": false,
            "thumbnail_src": false,
            "type": "comment",
          },
        ],
        "embed": RichEmbedStore {
          "_richEmbedFetchTimer": null,
          "clearRichEmbedAction": [Function],
          "richEmbedUrl": "",
          "setRichEmbedPromise": null,
        },
        "loadComments": [Function],
        "loadNext": "aaaaaa",
        "loadPrevious": "aaaaaa",
        "post": [Function],
        "setText": [Function],
      }
    }
  />
</ForwardRef(View)>
`;
